--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Add the executable
-add_executable(BasicDemo main.cpp)
+add_executable(BasicDemo src/BasicDemo.cpp)
+add_executable(SetRectangle src/SetRectangle.cpp)
 
 # Find Tesseract and Leptonica libraries
 find_package(PkgConfig REQUIRED)
@@ -18,3 +19,4 @@ include_directories(${Tesseract_INCLUDE_DIRS} ${Leptonica_INCLUDE_DIRS})
 
 # Link Tesseract and Leptonica libraries
 target_link_libraries(BasicDemo ${Tesseract_LIBRARIES} ${Leptonica_LIBRARIES})
+target_link_libraries(SetRectangle ${Tesseract_LIBRARIES} ${Leptonica_LIBRARIES})
